09-28-13
 - use_artbinds in HERETIC.CFG.  If set to 1, the following defaults are used:
   * 'F' for Torch
   * 'G' for Quartz Flask
   These binds can be customized via the HERETIC.CFG.  However, you must know
   the appropriate scancode.
 - art_torch will toggle a torch.
 - Fixed "-skill 0" to be an invalid option as well as any other invalid
   number passed to "-skill".
 - Specify the main game WAD with -mainwad.  Useful for DEUSF stuff and you
   don't want to remember if you un-DEUSF'd something.

09-25-13
 - Preliminary HHE support.  No text parsing.  Need to find a solution.

09-23-13
 - Weapon pick up text in Netgames.
 - No friendly fire returns.  This time it works properly!

09-21-13
 - Load a custom Gravis UltraSound INI file with -usegusini <filename.ini>.
   Error checks are in place to see if the file exists and if you passed
   something after -usegusini.
 - F10 will now quit at the title screen, just like Doom.

09-19-13
 - -oldsave parameter to load older save games (i.e. not the 1MB and
    256 string size games).
 - Warning to use -oldsave.
 - -convertsave <slot #> parameter.  Convert your old saves to the new ones!
   I don't think it will corrupt it, but do a backup first just in case.
 - Z_Free(&savebuffer) when you error out of incorrect versions.

09-15-13
 - use_wpnbinds in HERETIC.CFG.  If set to 1, the following defaults are used:
   * 'Q' for Phoenix Rod
   * 'Z' for Crossbow
   * 'X' for Dragon's Claw
   * 'C' for Hellstaf
   These binds can be customized via the HERETIC.CFG.  However, you must know
   the appropriate scancode.

09-14-13
 - Fixed joystick super speed.

09-08-13
 - Added checks for statcopy to work for episode ends.

09-05-13
 - Raised MAX_BOSS_SPOTS and MAX_MACE_SPOTS from 8 to 32.

09-04-13
 - "-statcopy <filename.txt>" will make a file (or append to it) with the
   game statistics.  Works with all game modes.  If you do not specify a
   filename it will default to STATS.TXT.  I did my best to make sure it