@@ -1,3 +1,8 @@
+10-02-13
+ - Draw Time clock on Automap with drawTime in config file.
+   * Set to 1 for Military Time.
+   * Set to 2 for Standard Time.
+
 09-28-13
  - use_artbinds in HERETIC.CFG.  If set to 1, the following defaults are used:
    * 'F' for Torch
